# EmbarcaTech_ProjetoIntegrado

./: .gitignore  CMakeLists-dev.txt  CMakeLists.txt  ProjetoIntegrado.c  README.md  diagram.json  wokwi.toml
inc/: ssd1306.c
